_generated-doc/2.16/config/quarkus-scheduler-scheduler-runtime-config.adoc

:summaryTableId: quarkus-scheduler-scheduler-runtime-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-scheduler-scheduler-runtime-config_configuration]]link:#quarkus-scheduler-scheduler-runtime-config_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-scheduler-scheduler-runtime-config_quarkus.scheduler.enabled]]`link:#quarkus-scheduler-scheduler-runtime-config_quarkus.scheduler.enabled[quarkus.scheduler.enabled]`

[.description]
--
If schedulers are enabled.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SCHEDULER_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SCHEDULER_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-scheduler-scheduler-runtime-config_quarkus.scheduler.overdue-grace-period]]`link:#quarkus-scheduler-scheduler-runtime-config_quarkus.scheduler.overdue-grace-period[quarkus.scheduler.overdue-grace-period]`

[.description]
--
Scheduled task will be flagged as overdue if next execution time is exceeded by this period.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SCHEDULER_OVERDUE_GRACE_PERIOD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SCHEDULER_OVERDUE_GRACE_PERIOD+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`1S`

|===
ifndef::no-duration-note[]
[NOTE]
[id='duration-note-anchor-{summaryTableId}']
.About the Duration format
====
The format for durations uses the standard `java.time.Duration` format.
You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc].

You can also provide duration values starting with a number.
In this case, if the value consists only of a number, the converter treats the value as seconds.
Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format.
====
endif::no-duration-note[]
